Reset form at footer

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ src="https://www.facebook.com/tr?id=1409393065820922&ev=PageView
       <div class="container ptl pb">
         <div class="center-xs">
           <h2 class="light mbs"> Inscrivez-vous à notre newsletter</h2>
-          <p class="p--large light"><span class="secondary"> Et soyez averti du lancement de CaptainScrum !</span> les 6 premiers mois !</p>
+          <p class="p--large light"><span class="secondary"> Et soyez averti du lancement de CaptainScrum !</span></p>
         </div>
         
         <form class="row mtl bottom-xs" id="form" onsubmit="register(); return false;">
