--- a/index.html
+++ b/index.html
@@ -51,11 +51,18 @@ src="https://www.facebook.com/tr?id=1409393065820922&ev=PageView
   <div class="layout layout--scroll">
     <div class="container-wrapper bg-dark bg-gradient-left">
       <div class="container">
+        <nav class="row ptl">
+          <ul style="display: block; text-align: right">
+            <li style="display: inline" class="prl"><a class="success" style="font-weight: bold;" href="/">ACCUEIL</a></li>
+            <li style="display: inline; "><a class="light" style="font-weight: bold;" href="/blog.html">LE BLOG</a></li>
+          </ul>
+        </nav>
+
         <div class="row center-xs">
           <div class="col-xs-12">
             <div class="pvl">
-              <img src="./images/logo.png" width="300" class="mtl">
-              <div class="pvl">
+              <img src="./images/logo.png" width="300" class="mts">
+              <div class="ptl">
                 <h1 class="primary-contrast">Votre coach agile</h1>
                 <p class="p--large primary">Réduisez les risques. Favorisez les succès.</p>
               </div>
